fixed christ image on mobile

--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -108,8 +108,6 @@
   }
   .Christ img {
     object-fit: contain;
-    position: relative;
-    left: 50px;
     height: 50%;
   }
   .Christ .Description {
